--- a/.github/workflows/build-test.yml
+++ b/.github/workflows/build-test.yml
@@ -15,14 +15,14 @@ jobs:
           repository: docker/cli
           ref: v20.10.8
           path: cli
-      - name: checkout docker-cli-windows
-        uses: actions/checkout@v2
-        with:
-          repository: ionash/docker-cli-windows
-          ref: main
-          path: docker-cli-windows
-      - name: copy files
-        run: cp -rf docker-cli-windows/scripts cli
+#      - name: checkout docker-cli-windows
+#        uses: actions/checkout@v2
+#        with:
+#          repository: ionash/docker-cli-windows
+#          ref: main
+#          path: docker-cli-windows
+#      - name: copy files
+#        run: cp -rf docker-cli-windows/scripts cli
       - name: create builder
         run: sudo docker buildx create --use
       - name: build binary
