--- a/.github/workflows/build-test.yml
+++ b/.github/workflows/build-test.yml
@@ -11,6 +11,8 @@ jobs:
   build-test:
     runs-on: ubuntu-20.04
     steps:
+      - name: fix line endings
+        run: git config --global core.autocrlf input
       - name: checkout docker/cli
         uses: actions/checkout@v2
         with:
