--- a/.github/workflows/create-release.yml
+++ b/.github/workflows/create-release.yml
@@ -21,7 +21,7 @@ jobs:
         uses: actions/checkout@v2
         with:
           repository: ionash/docker-cli-windows
-          ref: main
+          ref: ${{ github.ref }}
           path: docker-cli-windows
       - name: copy files
         run: cp -rf docker-cli-windows/scripts cli
