--- a/.github/workflows/merge-job.yml
+++ b/.github/workflows/merge-job.yml
@@ -23,7 +23,7 @@ jobs:
         uses: actions/checkout@v2
         with:
           repository: ionash/docker-cli-windows
-          ref: main
+          ref: ${{github.event.pull_request.head.ref}}
           path: docker-cli-windows
       - name: copy files
         run: cp -rf docker-cli-windows/scripts cli
