--- a/.github/workflows/build-test.yml
+++ b/.github/workflows/build-test.yml
@@ -21,8 +21,10 @@ jobs:
         uses: actions/checkout@v2
         with:
           repository: ionash/docker-cli-windows
-          ref: main
+          ref: ${{github.event.pull_request.head.ref}}
           path: docker-cli-windows
+      - name: confirm files
+        run: ls docker-cli-windows
       - name: copy files
         run: cp -rf docker-cli-windows/scripts cli
       - name: docker version
